attraversare un incrocio sulle strisce

--- a/index.html
+++ b/index.html
@@ -65,3 +65,23 @@
             +   ALTRIMENTI completare l'esercizio salvando e pushando la versione definitiva dell'esercizio
 
  -->
+
+ <!-- 
+     - attraversare un incrocio sulle strisce
+        -   avvicinarsi all'attraversamento pedonale
+        -   controllare se c'è un semaforo
+        -   SE c'è un semaforo
+            +   controllare che il semaforo sia acceso e/o funzionante
+            +   SE il semaforo è acceso e funzionante
+                *   attendere che si accenda la luce verde
+            +   ALTRIMENTI passare al passo successivo
+        -   controllare se la strada è a senso unico
+        -   SE la strada è a senso unico
+            +   guardare nella direzione in cui arrivano i veicoli per accertarsi che l'attraversamento pedonale sia libero e sicuro
+        -   ALTRIMENTI
+            +   guardare in entrambe le direzioni per accertarsi che l'attraversamento pedonale sia libero e sicuro
+        -   attraversare velocemente la strada senza fermarsi
+        -   SE il semaforo diventa arancione mentre si sta attraversando
+            +   accelerare il passo per arrivare dall'altro lato prima che scatti il rosso
+        -   ALTRIMENTI continuare normalmente ad attraversare la strada
+  -->
