scegliere un articolo da leggere dal feed

--- a/index.html
+++ b/index.html
@@ -85,3 +85,18 @@
             +   accelerare il passo per arrivare dall'altro lato prima che scatti il rosso
         -   ALTRIMENTI continuare normalmente ad attraversare la strada
   -->
+
+  <!-- 
+      - scegliere un articolo da leggere dal feed Linkedin/Facebook etc
+        -   SE si usa un dispositivo che ha l'app del social installata
+            +   aprire l'applicazione
+        -   ALTRIMENTI collegarsi al sito del social attraverso il browser
+        -   SE non è già stato effettuato il login
+            +   effettuare il login
+        -   ALTRIMENTI passare al passo successivo
+        -   SE si ricerca un articolo in particolare
+            +   utilizzare le funzioni di ricerca del sito per aprire la pagina relativa all'articolo che ci interessa
+        -   ALTRIMENTI scorrere la pagina principale del sito finché non si trova un articolo interessante
+        -   aprire l'articolo cliccando sul link
+        -   leggere l'articolo
+   -->
